# lodestoneGPT

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  docs.yml  feature-request.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/source/: conf.py  index.rst
docs/source/api/: agent.rst  ai-functions.rst  embeddings.rst  index.rst  models.rst  tools.rst
docs/source/concepts/: Agent.rst
examples/: jamie_gpt.py  research_gpt.py  vacation_gpt.py  weather_gpt.py  wolfram_gpt.py
lodestonegpt/: __init__.py  agent.py  aifunc.py  constants.py  logger.py  summarizer.py
lodestonegpt/embeddings/: __init__.py  azure_openai.py  hf.py  openai_.py
lodestonegpt/loops/: __init__.py  cli.py  repl.py  ui.py
lodestonegpt/memory/: __init__.py  local_memory.py
lodestonegpt/models/: __init__.py  azure_openai.py  hf.py  llama_cpp.py  openai_.py  stable_lm.py
lodestonegpt/tools/: __init__.py  agent_manager.py  base_tool.py  browser.py  code.py  filesystem.py  google_search.py  math.py  memory_manager.py  shell.py  simple_browser.py  user_manager.py
lodestonegpt/utils/: openai_key.py  spinner.py
tests/: dummy_embedding_provider.py  dummy_model.py  test_keys.py  test_serde.py
